@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.22.6
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed saving grid settings when the first entity in the blueprint is filtered out (e.g. via blacklist).
 ---------------------------------------------------------------------------------------------------
 Version: 0.22.5
 Date: 2023-05-27
